[package]
name = "moonblokz-chain-types"
version = "0.1.0"
edition = "2024"
description = "MoonBlokz no_std canonical blockchain data types and hash contract."
license = "MIT"
repository = "https://github.com/petersallai/moonblokz-chain-types"
keywords = ["embedded", "no-std", "blockchain", "types", "sha256"]
categories = ["embedded", "no-std"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
